2006-08-06  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/fortran.lang: highlight operators. Patch
	by John Spray, bug #153438.

2006-07-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: fix tab key issues when inserting
	spaces instead of tabs. Bug #343755.

=== gtksourceview 1.7.1 ===

2006-07-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/configure.ac:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.7.1

2006-07-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/configure.ac: newer po/LINGUAS stuff.

2006-07-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview/language-specs/boo.lang: add boo lang.

2006-07-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview/language-specs/d.lang: add D lang
	file by Martin Szulecki.

2006-06-22  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: fix bug #345252 – Automatic
	indentation does not work with keypad enter.

=== gtksourceview 1.6.1 ===

2006-04-10  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.6.1

2006-04-10  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c: constify the drop target list.

2006-04-09  Steve Frécinaux  <steve@istique.net>

	* configure.ac:
	* po/LINGUAS:
	
	Move ALL_LANGUAGES content to the po/LINGUAS file, to make our
	translators' life easier.

2006-04-09  Luca Cavalli  <loopback@slackit.org>

	* gtksourceview/language-specs/desktop.lang: add some missing
	keywords. Fixes bug #337743.

2006-04-08  Steve Frécinaux  <steve@istique.net>

	* gtksourceview/language-specs/xml.lang: added text/xsl in the xml
	mimetype list (quick and dirty fix for bug #335193)

2006-04-06  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/ruby.lang: fixes bug #336788 – Patch to
	make namespaced ruby constants display correctly (patch by
	Gabriel Bauman <gbauman@gmail.com>)	
