@@ -204,6 +204,8 @@ gtk_source_view_set_auto_indent
 gtk_source_view_get_auto_indent
 gtk_source_view_set_insert_spaces_instead_of_tabs
 gtk_source_view_get_insert_spaces_instead_of_tabs
+gtk_source_view_set_indent_on_tab
+gtk_source_view_get_indent_on_tab
 gtk_source_view_set_show_margin
 gtk_source_view_get_show_margin
 gtk_source_view_set_margin
