@@ -94,6 +94,10 @@ void		 gtk_source_view_set_insert_spaces_instead_of_tabs
 gboolean	 gtk_source_view_get_insert_spaces_instead_of_tabs 
 							(GtkSourceView   *view);
 
+void		 gtk_source_view_set_indent_on_tab 	(GtkSourceView   *view, 
+							 gboolean         enable);
+gboolean	 gtk_source_view_get_indent_on_tab 	(GtkSourceView   *view);
+
 void		 gtk_source_view_set_show_margin 	(GtkSourceView   *view,
 							 gboolean         show);
 gboolean 	 gtk_source_view_get_show_margin 	(GtkSourceView   *view);
